Bug 1065397 - Allow playback rate to be reset to normal. r=cpearce, a=lmandel